Fix turn-state-bar z-index so it sits above fancy background

--- a/app/assets/stylesheets/game_board.css
+++ b/app/assets/stylesheets/game_board.css
@@ -832,6 +832,8 @@ ul li .hex:hover .hex-bg {
     grid-template-columns: auto auto 1fr auto;
     align-items: center;
     height: 2.5rem;
+    position: relative;
+    z-index: 2;
 }
 
 #dashboard-link-area {
